Edits to Profile image and spacing issues

--- a/styles.css
+++ b/styles.css
@@ -72,10 +72,12 @@ header .profile-image {
   height: 150px;
   border-radius: 15px 50px;
   border: 4px solid rgb(88, 120, 11);
-  transition: all .5s;
+  transition-property: all;
+  transition-duration: 2s;
+  transition-timing-function: cubic-bezier(x1, y1, x2, y2);
 }
 header .profile-image:hover {
-  transform: scale(1.2) rotate(5deg);
+  transform: scale(1.2) rotate(5deg) skewx(20deg);
 }
 .Hobby_Pictures {
   margin-top: 50px;
@@ -103,12 +105,13 @@ header .profile-image:hover {
   max-width: 500px;
   text-align: left;
   background: #fff;
-  border-bottom: 4px solid #ccc;
+  border: 4px solid #ccc;
   border-radius: 6px;
   transition: all .5s;
 }
 .card:hover {
-  border-color: #ff99ff;
+  border-color: #f70606;
+  transform: scale(1.5);
 }
 
 ul.skills {
@@ -232,14 +235,35 @@ a.social:hover {
   height: 250px;
 }
 
-.Experience-Centered {
+.Secondary-Centered {
   text-align: center;
 }
-.Hobbies-nav, .Experience-nav {
+.Secondary-nav {
   width: 100%;
   background: black;
   min-height: 30px;
   padding: 10px;
   text-align: center;
   position: fixed;
+}
+
+.Hobbies-Title{
+  text-align: center;
+  margin-top: 50px;
+}
+
+.Hobbies-card{
+  margin: 30px;
+  padding: 20px 40px 40px;
+  max-width: 500px;
+  margin-left: ;
+  background: #fff;
+  border: 4px solid #ccc;
+  border-radius: 6px;
+  transition: all .5s;
+  margin-top: 100px;
+}
+.Hobbies-card:hover {
+  border-color: #f70606;
+  transform: scale(1.5);
 }
